# script-jail

./: .gitignore  .script-jail.yml  CLAUDE.md  Cargo.toml  README.md  action.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: e2e.yml  parity-test.yml  release-build.yml  release.yml  test-macos.yml  test.yml
docs/: architecture.md  design.md  development.md  divergence.md  parity-testing.md  releasing.md  testing.md
docs/research/: napi-preload-shared-state.md
docs/superpowers/plans/: 2026-05-31-cross-platform-npm-distribution-plan.md
docs/superpowers/specs/: 2026-05-31-cross-platform-npm-distribution-design.md
images/kernel/: arm64-vz.config  build.sh  x86_64-vz.config
scripts/: assemble-npm-packages.mjs  assert-npm-packlist.mjs  build-e2e-golden.ts  build.ts  check-publish-artifacts.sh  npm-packages.d.mts  npm-packages.mjs  parity-diff.ts  print-vite-plus-sha.ts  release-backfill.ts  validate-manifest.ts
src/: main.ts
src/action/: artifact-manifest.ts  cache.ts  config-override.ts  detect-pm.ts  diff.ts  host-install.ts  host-node-prefix.ts  inputs.ts  install-preflight.ts  log.ts  pre-fetch-artifacts.ts  runner-image.ts  validate-manifest.ts
src/action/backend/: bare.ts  docker.ts  firecracker.ts  mac-bare.ts  process.ts  select.ts  stage.ts  types.ts
src/action/firecracker/: download.ts  launch.ts  network.ts  overlay.ts  teardown.ts  vsock.ts
src/cli/: arch-flags.ts  detect-host.ts  detect-platform.ts  index.ts  local-artifacts.ts  parse-args.ts  provision-node-mac.ts  rootfs-cache.ts  spawn-vm.ts
src/guest/: agent.ts  apply-pnpm-arch.ts  attribution.ts  discover-pkg-dirs.ts  dlopen-block.cjs  emit.ts  env-spy.cjs  load-pm-flags.ts  macos-install-runner.ts  phase-fetch.ts  phase-install-macos.ts  phase-install.ts  platform-spoof.cjs  proc-reader-macos.ts  proc-reader.ts  protected-paths.ts  root-anchor.ts  strace-parser.ts
src/host-mac/: Cargo.toml
src/host-mac/src/: cli.rs  config.rs  delegate.rs  disks.rs  dispatch.rs  frames.rs  lib.rs  main.rs  vm.rs  vsock.rs
src/lock/: normalize.ts  private-realpath.ts  render.ts  schema.ts  tokenize.ts
src/release/: backfill.ts
src/rootfs/: Dockerfile.base  build.ts  cleanup.sh  init.sh  macho.ts  mke2fs.conf  orchestrate.sh  repro-hash-cli.ts  repro-hash.ts  shim-freshness.ts  vite-plus.ts  vmlinux.md
src/shared/: artifacts.ts  detect-pm.ts  http-download.ts  log.ts  pm-commands.ts  redact.ts  root-manifest.ts  run-audit.ts  vsock-protocol.ts
src/shim/: Cargo.toml  build.rs  build.sh  canon-buf-len.ts  env-shim.c  rust-toolchain.toml
src/shim/src/: fileops.rs  interpose.rs  lib.rs  net.rs  open_variadic.c  sj_spawn_chdir_np2.c
test/action/: cache.test.ts  config-override.test.ts  detect-pm.test.ts  diff.test.ts  host-install.test.ts  host-node-prefix.test.ts  inputs.test.ts  install-preflight.test.ts  pre-fetch-artifacts.test.ts  runner-image.test.ts  validate-manifest.test.ts
test/action/backend/: bare.test.ts  docker.test.ts  firecracker.test.ts  mac-bare.test.ts  select.test.ts  stage.test.ts
test/cli/: arch-flags.test.ts  detect-host.test.ts  detect-platform.test.ts  index.test.ts  local-artifacts.test.ts  parse-args.test.ts  provision-node-mac.test.ts  rootfs-cache.test.ts  spawn-vm.test.ts
test/docs/: releasing-claims.test.ts
test/e2e/: bun-skipped.test.ts  check-match.test.ts  check-mismatch-committed.test.ts  check-mismatch-fixture.test.ts  generate.test.ts  harness.ts  install-gating.test.ts  mac-parity.test.ts  spoof-input.test.ts
test/e2e/consumer/: package.json  (+1 more)
test/guest/: agent.test.ts  attribution.test.ts  discover-pkg-dirs.test.ts  dlopen-block.test.ts  emit.test.ts  env-shim.test.ts  env-spy.test.ts  load-pm-flags.test.ts  npm-prepare-runner.test.ts  phase-fetch.test.ts  phase-install-macos.test.ts  phase-install.test.ts  platform-spoof.test.ts  proc-reader-macos.test.ts  proc-reader.test.ts  protected-paths.test.ts  real-capture-npm-prepare-env.test.ts  resolve-prepare-command.test.ts  root-anchor.test.ts  strace-parser.test.ts
test/integration/: diff-action.test.ts  fixtures.test.ts  lockfile-roundtrip.test.ts  rootfs-reproducibility.test.ts
test/lock/: normalize.test.ts  render.test.ts  schema.test.ts  tokenize.test.ts
test/parity/: fixture.yml  macos-arm64-lockfile.yml
test/release/: backfill.test.ts
test/rootfs/: build-config.test.ts  dockerfile-snapshot.test.ts  init-sh.test.ts  repro-hash.test.ts  shim-validation.test.ts  vite-plus-sha.test.ts
test/scripts/: assemble-npm-packages.test.ts  assert-npm-packlist.test.ts  build-shim-freshness.test.ts  build-vmlinux-vz.test.ts  check-publish-artifacts.test.ts  filename-contract.test.ts  main-package-manifest.test.ts  npm-packages.test.ts  parity-diff.test.ts  release-workflow.test.ts
test/shared/: artifacts.test.ts  pm-commands.test.ts  redact.test.ts  run-audit.test.ts
(+44 files in other folders)
