[workspace]
resolver = "2"
members = ["src/shim", "src/host-mac"]

[workspace.package]
edition = "2024"
publish = false

# `[profile.release]` is lifted here from `src/shim/Cargo.toml` because cargo
# emits `warning: profiles for the non root package will be ignored` when a
# profile block lives in a workspace member.  The values below are verbatim
# the ones that previously lived in the shim manifest — kept here so they
# actually apply.  When `src/host-mac` is added in PR 3 it will inherit the
# same release tuning (acceptable: both are size/perf-sensitive native code).
[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
